# zsnip

./: Cargo.toml  README.md  rustfmt.toml
src/: cmd.rs  fs.rs  lib.rs  path.rs  zip.rs
