[package]
name = "zsnip"
version = "0.2.0"
edition = "2021"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
description = "A library that contains frequently used rust code snippets"
homepage = "https://github.com/ikey4u/zsnip"
documentation = "https://docs.rs/zsnip/latest"
repository = "https://github.com/ikey4u/zsnip"
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

[dependencies]
anyhow = "1.0.86"
dunce = "1.0.5"
glob = "0.3.1"
rayon = "1.10.0"
tempfile = "3.12.0"
walkdir = "2.5.0"
zip = "2.2.0"

[target.'cfg(windows)'.dependencies]
winsplit = "0.1.0"

[target.'cfg(not(windows))'.dependencies]
shlex = "1.3.0"
